# ChangeLog for eclass directory
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.656 2013/01/31 14:12:12 chithanh Exp $

  31 Jan 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  xorg-2.eclass:
  Add EAPI 5 sub-slot dependency on x11-base/xorg-server for packages which
  require rebuilding when the server is upgraded.

  31 Jan 2013; Tomáš Chvátal <scarabeus@gentoo.org> obs-service.eclass:
  Additional files also must be versioned as they change between versions.

  30 Jan 2013; Michał Górny <mgorny@gentoo.org> python-r1.eclass,
  python-single-r1.eclass:
  Use (-) USE-defaults to reduce issues from removing flags.

  29 Jan 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Disable pypy1.8 globally.

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> vim-plugin.eclass:
  Remove all hidden files in the main tarball dir.

  27 Jan 2013; Michał Górny <mgorny@gentoo.org> python-r1.eclass:
  Fix output redirections in run_in_build_dir().

  27 Jan 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Support using distutils-r1 along with python-single-r1.

  27 Jan 2013; Michał Górny <mgorny@gentoo.org> distutils-r1.eclass:
  Support making dependency and phase function enforcement optional.

  27 Jan 2013; Michał Górny <mgorny@gentoo.org> python-r1.eclass:
  Introduce run_in_build_dir() function as used by GNOME ebuilds.

  27 Jan 2013; Michał Górny <mgorny@gentoo.org> python-utils-r1.eclass:
  Introduce python_doheader(), to install headers specific to a Python
  implementation.

  27 Jan 2013; Joerg Bornkessel <hd_brummy@gentoo.org> vdr-plugin-2.eclass:
  reverted last changes

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> vim-plugin.eclass:
  Remove files before installing docs.

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> vim-plugin.eclass:
  Also remove stray makefiles.

  27 Jan 2013; Tim Harder <radhermit@gentoo.org> vim-plugin.eclass: