@@ -1,6 +1,10 @@
 # ChangeLog for eclass directory
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.656 2013/01/31 14:12:12 chithanh Exp $
+# $Header: /var/cvsroot/gentoo-x86/eclass/ChangeLog,v 1.657 2013/01/31 19:59:54 eva Exp $
+
+  31 Jan 2013; Gilles Dartiguelongue <eva@gentoo.org> gst-plugins10.eclass:
+  Allow build of multiple plugins in different directories. Make variables more
+  easily override-able.
 
   31 Jan 2013; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
   xorg-2.eclass:
